Closed Bug 569337 Opened 15 years ago Closed 15 years ago

Fix compilation issues when SVG and SMIL are disabled

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: mounir, Assigned: mounir)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Patch v1 (obsolete) — Splinter Review
When svg is disabled (which automatically disble smil), the current m-c do not compile. The attached patch fixes the issues I had. The patch is really small (6 new lines). (it's in the layout component because it only affects layout)
Attachment #448506 - Flags: review?(bolterbugz)
Attachment #448506 - Flags: review?(bolterbugz) → review?(dbaron)
We could do with less MOZ_SVG rather than more. Couldn't we just always have SetSVGMode defined?
Comment on attachment 448506 [details] [diff] [review] Patch v1 I tend to agree with Robert, but this seems ok for now. However, in this change: >diff --git a/layout/style/nsStyleAnimation.cpp b/layout/style/nsStyleAnimation.cpp >+#ifdef MOZ_SVG > if (aUseSVGMode) { > parser.SetSVGMode(PR_TRUE); > } >+#endif // MOZ_SVG you probably want: if (aUseSVGMode) { #ifdef MOZ_SVG parser.SetSVGMode(PR_TRUE); #else NS_NOTREACHED("aUseSVGMode should not be set"); #endif } r=dbaron with that
Attachment #448506 - Flags: review?(dbaron) → review+
Attached patch Patch v2Splinter Review
r=dbaron I also agree with you Robert but I prefer to have this patch landed then having a patch changing some SVG functions to be defined but empty when !MOZ_SVG.
Attachment #448506 - Attachment is obsolete: true
Keywords: checkin-needed
I didn't mean to imply that the methods would be defined but empty. I was suggesting that they be implemented for all builds so MOZ_SVG gradually dies.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: