Bug 569337 - Fix compilation issues when SVG and SMIL are disabled. r=dbaron